@@ -1,5 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST coffee-script-source-1.7.0.gem 54272 SHA256 acae7508d3f8c8a39f681eab73a1e43d1c1a564e6580122884e049ae761d1157 SHA512 692c001d03feb938d333fb9d4adb504e4f72b0603baae570b0f479787b07cddcda5a90c17c2d83355f9754808af6cd890338d5302b8d915e3f33c1857b29ed7c WHIRLPOOL b959aaabfcc199ed848b8513e96bdbdbacc9f1b452dcce603785e7727264902f74645f8c82a96473ed9c2ceae8421b972753768fa452ed3991773003d55f1399
+DIST coffee-script-source-1.7.1.gem 54272 SHA256 509b3ed091e2cdaf09f23b4fe2c4137a7c3d3959af4f081ecc552a229ac8fa41 SHA512 86896054d2edcf00bd81827f00bea1d22973486bafb0b4dbcf09720727365b22ee756fcb5e92dd0bd8f5e84eca486540afe2459f28808976646afcaa0775e31f WHIRLPOOL 1628af327f509cce2773651925c58f8e7cc48c34018fe8a93e012383032779d82ebdb5f7236142c16ce98d3aea6371462d66dab66b1959bbae4975031640b34e
 EBUILD coffee-script-source-1.7.0-r1.ebuild 590 SHA256 21497e9f3b3482c2cf40c081d792ba6be95085b42e0415c3bc72c6b2656d4a3b SHA512 3d5ab903ba89f9fceeed8a546f8d4da30c52122c136adc127bd26c3a498add97589d63bbfd987e9dc83389223a0e2a5cca57d99cb0c01c6098a329e52d47d680 WHIRLPOOL 1ee6e85f63cd78f36fa0bdb759d73ba2cf447aba61991234c9fca07f4644716d371b37178e68e85dc8a3d07b8aae7e7c26b1d406781812769f79994c5ecb927f
 EBUILD coffee-script-source-1.7.0.ebuild 579 SHA256 b1acd60c77c1931a45d6951ef79fa898042c90d4b7da10450df40bd89c516bfe SHA512 2b3f3048ec5aeeb21025890c56ac499112ad91ea5e01db3d0e383b3b5a057a30cc9ec6c8a68a8786b96e03014d4aa351f69d3ce8c7a5329c178067c2de803ea2 WHIRLPOOL 883fbedaaf8a4c206749fb143868d2efee6a9d1f7646587b2388b3b2de056d05202e752e18f0155763b0836924b2752f3c32e9c80cd66720439f872b6a93b7d4
-MISC ChangeLog 3288 SHA256 62b8fc93fbe15453e1b7e05f6b54e08359cd67b862af513cf465f3ee2a3dc88f SHA512 adb00116ac9102d83a97507eee7f77e82ead41cd050666e4f95329b91524b4de0292547a389dad6d420006374a7771773c2808796840ed541127f60c8deb55ca WHIRLPOOL 785372cc0a041f7e6d426444d6bf70f55ca793a2822882049e5dac63681e78a85e34e5f7fa9720adad7dec99b4c615e73cf73c6be37fa226dedb307ee3d46289
+EBUILD coffee-script-source-1.7.1.ebuild 587 SHA256 6486b727e4b678f114d51c168c5391bf615601126ffb9437030cc612bac2cc86 SHA512 7aebd8175d21273b57edfe57457642d1a226050c2971cde2bf14774024dbf4baf8e7a4c4eb4abd6bad04304a3bf54b54954eee7f0023e3b53c264061d7ce253d WHIRLPOOL 5fc8d620835a3819ba189ed5bf4c1f959d0188d96624f3fc3b838327bf2f31139065cba9a466168005579550461fce7a10dd3ea3a644c2bd827da3f61ccfc502
+MISC ChangeLog 3437 SHA256 704e15914c6687c0ad39f5e5f6c4b28b83ed117bda3501010df1044832d34789 SHA512 a9f5b97da6817e7bc96f86b2b98aee48502781ddf9343dfde5cc5d913bba1e63dd076d3211aebefcb945d3322f7b46c0b74641c496acdbb69e4f013a2ed73d63 WHIRLPOOL c3bb77c4ba361609a76e64d63ed5aef7936cd097d5652f09a27a9d2ed7a8f5aee28563a954df9afb04cdf74ffcd70f4754b4aac3b42fbc97d228c5393af4a539
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlO/d0EACgkQiIP6VqMIqNe8YQD/b9/HBSCuOqdi1CorRNGpXUe4
+F23oyugQzPhYVX5W7JQA/AsIpH+dfTAYR1NQTPrKjXTLwBspfUguNpDSWPE2xtB0
+=3vwL
+-----END PGP SIGNATURE-----
