@@ -2,14 +2,16 @@
 Hash: SHA256
 
 DIST coffee-script-2.2.0.gem 5120 SHA256 acdd9f907950cfcf2342bc621ac9d11c9b0f34e2be8ab02de7845c673fb96c8c SHA512 5d131a93a6d195da7a0969e5dbc62e4fa14f3b074e2d25228aa7ab4c71ae5d6d211f1ebef1fed76ac57cce1393becab7efd78120e7a4babdc1254dcc330d4359 WHIRLPOOL 73b904d16cc1a61cc7f5d58e526264423b156630bc93bb79f36f0014556e06c97b628e83a79122a12bdfe0fedf467a5a4bc892673bcd39ecfb3a77d9df098c98
+DIST coffee-script-2.3.0.gem 6656 SHA256 6d54ad08a94c4a5b3f7a8d1e0625b412f2d1ac1264243cb046131e2d9c281744 SHA512 ba481e8d01bdae5c65f317e9c65ecee6bba80aa733ffb1d27f226db63d77c41ab6528b20a3b4696e6e1a8658c9028c4b6a6c79fb979f5e0b999b40a1687b8483 WHIRLPOOL be230cb2b1ce468ea05303e38c6ae9779900f601adf38735cd159a29d8783fea1b8903bf2b1f9a9317b575d0930bd11df8bbdedb9d02a8dc4ef966b926159d3c
 EBUILD coffee-script-2.2.0-r1.ebuild 689 SHA256 0d9b44d8946c451f460d8262d8de212c4fa262cde1cd6936ac717b3987112ca7 SHA512 c254d7f548574796e843525e5dada4187e1f65eaf5796d0a6238a392eed4ed4c3c98d9b0b1fee4be15bc105f0db3c50793281c8d8c9d83acf070f13cd987f0d0 WHIRLPOOL f61613aeb69a16bda98b9bdefd4fd10e998ee0e97aac492017db36b15bb56ed8973cd4dd388bffcc7569a9a5e8be6aedd0f68bcc0c816f1c40dc7900f1b2b2aa
 EBUILD coffee-script-2.2.0-r2.ebuild 696 SHA256 a4a19b6e149d86a80fe7a18bbedc756b3e2396e07eb6bacdb5066167181fee8f SHA512 ad065c49c35eef70395228d8c134ae1b023126fd38eed022a66b5985c0d17efa567f173b1cb8e5eb6da78ec1bf47e470210c14faaca9795bfb19f6ffa61c57a1 WHIRLPOOL 10e92237e11ba7526727c1528d58ea7be8cc7cc81ed36833187481ac47b0808c3ea3afdbe8ad3a82b6ee2e45778afcba4d366459c1c0dbbb39af1240919dc4a4
-MISC ChangeLog 1225 SHA256 f72cd18eeac47dfd30ff0da60cd310f7d54b9133269ee077110a4432af980d63 SHA512 ae5860a1e426cca510c4c3d864294ec0166874a614e0ad635b40da0a913a86604e34ca882cf8c6c63cbab43f612bd63b79927a9fe12c445f8a8bb6470f2cfccb WHIRLPOOL 4c0e53948eade0c6942d2acabbee1834fb38b17a8340473c13790e3bab665ec0943642d07afa9593623f578fe805dda56dff80f307a07ef08a6d95f65a9708a6
+EBUILD coffee-script-2.3.0.ebuild 693 SHA256 1e53dbaac5048f6406c0205be448213b006c026ed7b8bdabf74a07938b6edaf9 SHA512 b7d280610dc8e1dfede66fc417b415a44bcf38e9833a43f0a016066d55ed858d0fe02656c1b2f6c2161f10a8fc4e0918a2923414bde6a3c12a4a762886d9fe91 WHIRLPOOL 0ad3a9e9262f565da60c3eb0d734752f6424ed1945fa80d3ff6dbf88070a6902699c7db09f66cb19932254142dcdc3c972685645c8c6b9941b1f2c24eedabd07
+MISC ChangeLog 1357 SHA256 51dc7ee9c2021a1336c7c089360f122da5e75e4ac7d8538194aced88f9830cc5 SHA512 9e756d0bfa2e596f028e43877082033dc11a501fed708dd258c063edceedd1501dc095e99ccd25a04dbc8134e348dd146835e56a8921faa4b3c846436717d4fd WHIRLPOOL ab1c1cb687ca83ec19dc9eec3d9db6e3af98a15ad2fdb6a50f772988285ef6f4a5ef1895f9dad7d51f6b4d8aea44053c6e25bce4a1ec099056a14078bdb0ac01
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlNWwIkACgkQiIP6VqMIqNdOxAD+N9PzVA+4reeeoNKEPo3KTqQn
-uDBmwl48DtDsOr0DbZQA/3Vl+nwSHFbD3Ra1yH69H+vTgpVEmyz350zOxg+9PrFj
-=5SAu
+iF4EAREIAAYFAlO/d/EACgkQiIP6VqMIqNfYpwD+PBFUIdQh3jyo9LDKBfVQbt8Y
+rpS6fsOiHpJWY/jOuo4A/0cSHzJKOfMpKNMf9M8V9fcymtPmVFQ5Azndi0zBjxTb
+=Sqn3
 -----END PGP SIGNATURE-----
