@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( dev-ruby/coffee-script-source[ruby_targets_ruby19] dev-ruby/execjs[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/coffee-script-source[ruby_targets_ruby20] dev-ruby/execjs[ruby_targets_ruby20] ) ruby_targets_ruby21? ( dev-ruby/coffee-script-source[ruby_targets_ruby21] dev-ruby/execjs[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DESCRIPTION=Ruby CoffeeScript is a bridge to the official CoffeeScript compiler.
+EAPI=5
+HOMEPAGE=https://github.com/josh/ruby-coffee-script https://github.com/rails/coffee-rails
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test
+KEYWORDS=~amd64 ~arm ~x86 ~x64-macos
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( dev-ruby/coffee-script-source[ruby_targets_ruby19] dev-ruby/execjs[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/coffee-script-source[ruby_targets_ruby20] dev-ruby/execjs[ruby_targets_ruby20] ) ruby_targets_ruby21? ( dev-ruby/coffee-script-source[ruby_targets_ruby21] dev-ruby/execjs[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+SLOT=0
+SRC_URI=mirror://rubygems/coffee-script-2.3.0.gem
+_eclasses_=eutils	76fc3c462065bb4ca959f939e6793f94	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	fac675dcccf94392371a6abee62d909f	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=4fde8ba721e8ff0f454354166962fe33
