@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/coffee-script
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coffee-script/ChangeLog,v 1.7 2014/04/22 19:18:32 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coffee-script/ChangeLog,v 1.8 2014/07/11 05:36:47 graaff Exp $
+
+*coffee-script-2.3.0 (11 Jul 2014)
+
+  11 Jul 2014; Hans de Graaff <graaff@gentoo.org> +coffee-script-2.3.0.ebuild:
+  Version bump.
 
 *coffee-script-2.2.0-r2 (22 Apr 2014)
 
