@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/coffee-script-source
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coffee-script-source/ChangeLog,v 1.21 2014/05/21 01:47:45 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coffee-script-source/ChangeLog,v 1.22 2014/07/11 05:33:47 graaff Exp $
+
+*coffee-script-source-1.7.1 (11 Jul 2014)
+
+  11 Jul 2014; Hans de Graaff <graaff@gentoo.org>
+  +coffee-script-source-1.7.1.ebuild:
+  Version bump.
 
   21 May 2014; Manuel Rüger <mrueg@gentoo.org>
   coffee-script-source-1.7.0.ebuild:
